# serde_pipe

./: .mergify.yml  .travis.yml  Cargo.toml  README.md  azure-pipeline.yml  azure-pipelines.yml  azure-rust.yml
src/: buffer.rs  fringe.rs  lib.rs
