[package]
name = "serde_pipe"
version = "0.1.3"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools"]
keywords = ["serde","serialize","pipe"]
description = """
Turn serde+bincode into a pipe: push `T`s and pull `u8`s, or vice versa.

This library gives you a `Serializer` pipe, into which you can push `T`s and pull `u8`s; and a `Deserializer` pipe, into which you can push `u8`s and pull `T`s.
"""
repository = "https://github.com/alecmocatta/serde_pipe"
homepage = "https://github.com/alecmocatta/serde_pipe"
documentation = "https://docs.rs/serde_pipe/0.1.3"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/serde_pipe", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[dependencies]
fringe = { git = "https://github.com/edef1c/libfringe", optional = true }
bincode = "1.0"
serde = "1.0"
either = { version = "1.5" }

[dev-dependencies]
rand = { version = "0.7", features = ["small_rng"] }
